<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inspeccion_editar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="413dp"
            android:layout_height="47dp"
            android:background="@android:color/black"
            android:text="@string/lbl_Inspeccion_Editar_Navegacion"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_Grabar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#006DCC"
                android:onClick="bt_Grabar"
                android:text="@string/lbl_Inspeccion_Editar_bt_Grabar"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/bt_Cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#006DCC"
                android:onClick="bt_Cancelar"
                android:text="@string/lbl_Inspeccion_Editar_bt_Cancelar"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_Folio"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/lbl_Inspeccion_Editar_lbl_Folio"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="413dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_Fecha"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/lbl_Inspeccion_Editar_lbl_Fecha"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Spinner
            android:id="@+id/cb_Estado"
            android:layout_width="match_parent"
            android:layout_height="41dp" />

        <EditText
            android:id="@+id/txt_Codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/lbl_Inspeccion_Editar_txt_Codigo"
            android:inputType="textPersonName"
            android:textSize="12dp" />

        <Button
            android:id="@+id/bt_Escanear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#006DCC"
            android:onClick="bt_Escanner"
            android:text="@string/lbl_Inspeccion_Editar_bt_Escanear"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/lst_Detalles"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>